# code-light

./: .gitignore  README.md  README_CN.md  index.html  package.json  test_svg.rs
.claude/: settings.local.json
.github/workflows/: build.yml
hooks/: _helpers.sh  notification.sh  post-tool-use-failure.sh  post-tool-use.sh  pre-tool-use.sh  stop.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
