[package]
name = "code-light"
version = "0.1.0"
description = "A system tray status light for AI coding agents"
authors = ["you"]
edition = "2021"

[lib]
name = "code_light_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
